# planner

./: .dockerignore  .gitignore  README.md  local.Dockerfile  pyproject.toml  requirements.txt
apps/courses/: admin.py  models.py
apps/courses/migrations/: 0001_initial.py  0002_course_duration.py  0002_part_level.py
apps/medias/: models.py
apps/notes/: admin.py  models.py
apps/notes/migrations/: 0001_initial.py  0002_folder_level.py
apps/skills/: admin.py  models.py
apps/skills/migrations/: 0001_initial.py  0002_skill_parent.py  0003_skill_level.py
apps/tags/: admin.py  models.py
apps/tags/migrations/: 0001_initial.py
apps/tags/models/: __init__.py  models.py  types.py
configs/: asgi.py  settings.py  wsgi.py
utils/exceptions/: __init__.py  generals.py  medias.py
utils/funcs/: __init__.py  dates.py  texts.py
utils/models/: __init__.py  bases.py  fields.py
utils/types/: __init__.py  bases.py
